Install Django Tastypie & Migrate

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
 Django==1.8.3
 Django==1.8.3
 django-autoslug==1.8.0
+Django==1.8.3
+django-autoslug==1.8.0
+django-tastypie==0.12.2
+python-dateutil==2.4.2
+python-mimeparse==0.1.4
+six==1.9.0
